DOCS - gateway.http e alguns ajustes
