# services/gateway/public/swagger/openapi.yaml
@@ -14,28 +14,28 @@ paths:
       parameters:
         -
           name: name
-          in: path
+          in: query
           description: 'Nome do usuário'
           required: true
           schema:
             type: string
         -
           name: email
-          in: path
+          in: query
           description: 'E-mail do usuário - Usado como login'
           required: true
           schema:
             type: string
         -
           name: password
-          in: path
+          in: query
           description: 'Senha do usuário'
           required: true
           schema:
             type: string
         -
           name: subscriber
-          in: path
+          in: query
           description: 'Identifica se o usuário é assinante (default: false)'
           required: false
           schema:
@@ -43,6 +43,8 @@ paths:
       responses:
         '200':
           description: OK
+        '400':
+          description: 'Dados inválidos'
         '403':
           description: 'Autorização negada'
         '500':
@@ -54,6 +56,20 @@ paths:
       summary: 'Lista todas as publicações de um postagem'
       operationId: 'App\Http\Controllers\CommentController::indexByPost'
       parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
         -
           name: postID
           in: path
@@ -70,6 +86,20 @@ paths:
       summary: 'Deleta TODOS os comentários de uma postagem'
       operationId: 'App\Http\Controllers\CommentController::deleteByPost'
       parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
         -
           name: postID
           in: path
@@ -92,6 +122,20 @@ paths:
       operationId: 'App\Http\Controllers\CommentController::indexByUser'
       parameters:
         -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
+        -
           name: userID
           in: path
           description: 'ID do user'
@@ -108,6 +152,20 @@ paths:
       summary: 'Deleta TODOS os comentários de um usuário em uma postagem'
       operationId: 'App\Http\Controllers\CommentController::deleteByPostAndUser'
       parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
         -
           name: postID
           in: path
@@ -136,6 +194,20 @@ paths:
       summary: 'Deleta um comentário'
       parameters:
         -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
+        -
           name: commentID
           in: path
           description: 'ID do comentário'
@@ -155,6 +227,20 @@ paths:
         - Comments
       summary: 'Cria um comentário em uma postagem'
       parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
         -
           name: post_id
           in: query
@@ -186,16 +272,77 @@ paths:
       responses:
         '200':
           description: OK
+        '400':
+          description: 'Dados inválidos'
         '403':
           description: 'Autorização negada'
         '500':
           description: 'Erro ao criar'
+  /transactions:
+    post:
+      tags:
+        - Transactions
+      summary: 'Cria uma transação'
+      operationId: 'App\Http\Controllers\TransactionController::store'
+      parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
+        -
+          name: type
+          in: query
+          description: 'Tipo da transação (enun: in, out)'
+          required: true
+          schema:
+            type: integer
+        -
+          name: coins
+          in: query
+          description: 'Quantidade de moedas da transação'
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: 'Dados inválidos'
+        '402':
+          description: 'Créditos insuficientes'
+        '500':
+          description: 'Erro ao exibir notificação'
   /notifications/all:
     get:
       tags:
         - Notifications
       summary: 'Lista todas as notificações do usuário logado'
       operationId: 'App\Http\Controllers\NotificationController::indexAll'
+      parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: OK
@@ -207,6 +354,21 @@ paths:
         - Notifications
       summary: 'Lista todas as novas notificações do usuário logado'
       operationId: 'App\Http\Controllers\NotificationController::indexNew'
+      parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: OK
@@ -218,6 +380,21 @@ paths:
         - Notifications
       summary: 'Lista todas as notificações do usuário que ainda não expiraram'
       operationId: 'App\Http\Controllers\NotificationController::index'
+      parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: OK
@@ -229,6 +406,34 @@ paths:
         - Notifications
       summary: 'Retorna os dados de uma notificação'
       parameters:
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
+        -
+          name: email
+          in: query
+          description: 'E-mail do usuário - Usado como login'
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          description: 'Senha do usuário'
+          required: true
+          schema:
+            type: string
         -
           name: notificationID
           in: path
